codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__realtime_requests__voice_partial_completed_after_thread_switch.snap
---
source: tui/src/app/tests/realtime_requests.rs
expression: "normalize_voice_snapshot_directory(&format!(\"Other task:\\n{other_ui}\\nRestored owner:\\n{}\\n{rendered}\",\nrender_bottom_popup(&app.chat_widget, 80)), &app.config.cwd,)"
---
Other task:
› Ask Codex to do anything

  gpt-test default·/tmp/project
Restored owner:
 voice ● listening                                      f9 mute     /voice stop
   mic ▁▁▁▁▁▁  codex ▁▁▁▁▁▁

› Ask Codex to do anything

  gpt-test default·/tmp/project

  >_ OpenAI Codex (v0.0.0)
     /tmp/project

  To get started, describe a task or try one of these commands:

  /init - create an AGENTS.md file with instructions for Codex
  /status - show current session configuration
  /permissions - choose what Codex is allowed to do
  /model - choose what model and reasoning effort to use
  /review - review any changes and find issues

› spoken partial completed
